Worked on Jerry cluster paper.

--- a/jerry-clusters/main.tex
+++ b/jerry-clusters/main.tex
@@ -1,7 +1,39 @@
-
+\documentclass{article}
 
 \title{Dynamical classification for biological systems}
+\author{Max Collard}
 
 \begin{document}
-    
+
+\maketitle
+
+\begin{abstract}
+    (Abstract goes here.)
+\end{abstract}
+
+
+\section{Introduction}
+
+\ldots
+
+
+\section{Methods}
+
+\ldots
+
+
+\section{Results}
+
+\ldots
+
+
+\section{Discussion}
+
+\ldots
+
+\subsection{Conclusions}
+
+\ldots
+
+
 \end{document}
